<?xml version="1.0"?>
<package>
  <name>axis_camera</name>
  <version>0.0.1</version>
  <description>A simple driver for the Axis security cameras</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="rnavarro@robotnik.es">Roman</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/axis_camera</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robotnik_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>diagnostic_msgs</build_depend>

  <run_depend>robotnik_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosservice</run_depend>
  <run_depend>package</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>camera_info_manager_py</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>tf</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
