<?xml version="1.0"?>
<package>
  <name>axis_camera</name>
  <version>0.1.0</version>
  <description>A simple driver for the Axis security cameras</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robotnik_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  

  <run_depend>robotnik_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosservice</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>camera_info_manager_py</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>compressed_depth_image_transport</run_depend>
  <run_depend>compressed_image_transport</run_depend>
  <run_depend>theora_image_transport</run_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
